--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@types/ioredis": "^4.28.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "i18next": "^24.2.1",
+    "i18next-browser-languagedetector": "^8.0.2",
     "ioredis": "^5.4.2",
     "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "next": "^15.1.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
